--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,27 @@
 Белый цвет текста #FFFFFF
 Белый цвет с прозрачностью rgba(255, 255, 255, 0.6) 
 Радиус скругления углов 4px
+
+Fonts
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 900;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
  */
 
 :root {
@@ -28,7 +49,11 @@
 body {
 	background-color: var(--main-bg-color);
 	color: var(--main-text-color);
-	font-family: Roboto;
+	font-family: Roboto, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
 }
 
 a {
@@ -43,6 +68,10 @@ li {
 .button {
 	border-radius: var(--border-radius);
 	cursor: pointer;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
 }
 
 .button.primary {
@@ -59,16 +88,31 @@ li {
 
 .section-title {
 	color: var(--title-color);
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.17x;
+	text-align: center;
+	letter-spacing: 0.03em;
 }
 
 .section-subtitle {
 	color: var(--title-color);
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.03em;
 }
 
 /* Nav menu */
 
 .logo {
 	color: #000000;
+	font-family: "Raleway";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.19;
+	letter-spacing: 0.03em;
 }
 
 .logo.accent {
@@ -77,10 +121,20 @@ li {
 
 .logo-footer {
 	color: var(--white-text-color);
+	font-family: "Raleway";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.19;
+	letter-spacing: 0.03em;
 }
 
 .menu > .link {
 	color: var(--title-color);
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
 }
 
 /* .menu > .link:hover,
@@ -93,6 +147,13 @@ li {
 	color: var(--accent-color);
 }
 
+.contacts {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+}
+
 .contacts > .email:hover,
 .contacts > .email:focus {
 	color: var(--accent-color);
@@ -102,6 +163,14 @@ li {
 
 .hero-title {
 	color: var(--title-color);
+	font-weight: 900;
+	font-size: 44px;
+	line-height: 1.36;
+	text-align: center;
+	letter-spacing: 0.06em;
+	text-transform: uppercase;
+	background-color: #757575;
+	color: #ffffff;
 }
 
 /* Testimonials */
@@ -114,6 +183,19 @@ li {
 
 /* Our team */
 
+.section-subtitle.team {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.19;
+	text-align: center;
+	letter-spacing: 0.03em;
+}
+
+.team + p {
+	line-height: 1.19;
+	text-align: center;
+}
+
 /* footer */
 
 .footer {
@@ -121,10 +203,19 @@ li {
 }
 .address {
 	color: var(--white-text-color);
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
 }
 
 .footer-contacts {
 	color: var(--white-transparent-text-color);
+
+	font-style: normal;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
 }
 
 /* PORTFOLIO */
@@ -134,10 +225,26 @@ li {
 	background-color: var(--add-bg-color);
 	color: var(--title-color);
 	border: none;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.62;
+	text-align: center;
+	letter-spacing: 0.03em;
 }
 
 .button.filter:hover,
 .button.filter:focus {
 	background-color: var(--accent-color);
 	color: var(--white-text-color);
+}
+
+.section-subtitle.works {
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: 0.06em;
+}
+
+.works + p {
+	font-size: 16px;
+	line-height: 1.88;
 }
